video player iframe display blocked to prevent jumping around when setting height on finalist swap

--- a/drupal/profiles/takepart/themes/takepart3/campaigns/intelchange/intelchange.css
+++ b/drupal/profiles/takepart/themes/takepart3/campaigns/intelchange/intelchange.css
@@ -1456,6 +1456,9 @@
 .page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .video {
   margin-bottom: 35px;
 }
+.page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .video .video-player {
+  display: block;
+}
 .page-wordlet-intelchange-vote #page .second-block .vote .finalist-content .finalist .name {
   font-size: 1.938em;
   color: rgb(31, 162, 220);
